/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.orbitix.modelo;

import java.util.Date;

public class Pago {
    private String id;
    private double monto;
    private Date fecha;
    private MetodoPago metodo; // CORREGIDO: Mayúscula inicial (el Enum)

    public Pago(String id, double monto, Date fecha, MetodoPago metodo) {
        this.id = id;
        this.monto = monto;
        this.fecha = fecha;
        this.metodo = metodo;
    }

    public boolean procesarPago() {
        if (monto > 0 && metodo != null) {
            System.out.println("Procesando pago de $" + monto + " vía " + metodo);
            return true;
        }
        return false;
    }


    public String getId(){
        return id; 
    }
    public void setId(String id){
        this.id = id;
    }
    public double getMonto(){
        return monto;
    }
    public void setMonto(double monto){
        this.monto = monto;
    }
    public Date getFecha(){
        return fecha;
    }
    public void setFecha(Date fecha){
        this.fecha = fecha;
    }
    public MetodoPago getMetodo(){
        return metodo;
    }
    public void setMetodo(MetodoPago metodo){
        this.metodo = metodo;
    }
}
